# MASTpy

./: .gitignore  LICENSE  README.md  compare_cs_results.py  compare_results.py  difference_expression.r  git_commit_push.py  pyproject.toml  setup.py  test_cs_ciliated.py  test_layers.py  test_pancreas.py  test_seurat_cs.R  test_seurat_mast.R
MAST_RRes/: RMAST_res.csv
docs/: advanced_usage.md  api_reference.md  basic_usage.md  index.md  installation.md
examples/: cdata.csv  compare_mast.R  compare_mast.py  compare_mast_direct.py  comparison_results.csv  expression_matrix.csv  fdata.csv  generate_test_data.R  r_mast_coefC.csv  r_mast_coefD.csv  test_data.rds
mastpy/: __init__.py  example.py  io.py  requirements.txt  setup.py  stats.py  zlm.py
mastpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mastpy/core/: __init__.py  bootstrap.py  hypothesis.py  lm_wrapper.py  predict.py  single_cell_assay.py  zlm.py
mastpy/tools/: differential_expression.R  find_deg.py
mastpy/utils/: __init__.py  utils.py
tests/: test_find_deg.py  test_mastpy.py  test_mastpy_de.py
