[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mastpy"
version = "0.1.0"
description = "Model-based Analysis of Single-cell Transcriptomics in Python"
readme = "README.md"
authors = [
  { name = "dot4diw" }
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "scipy",
  "statsmodels",
  "numba",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mastpy*"]
exclude = ["datasets*", "tests*"]

